--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TP3Android</string>
+    <string-array name="countries">
+        <item>France</item>
+        <item>Spain</item>
+        <item>Italy</item>
+    </string-array>
 </resources>
